force-app/main/default/objects/Membership_Plan__c/Membership_Plan__c.object-meta.xml
<CustomObject>
    <description>Membership Plans</description>
    <label>Membership Plan</label>
    <nameField>
        <label>Membership Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Membership Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>