force-app/main/default/objects/Membership_Plan__c/fields/Class_Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Class_Access_Level__c</fullName>
    <label>Class Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>All-Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>