force-app/main/default/objects/Membership_Plan__c/fields/Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Plan_Name__c</fullName>
    <description>Plan Name</description>
    <label>Plan Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>